Updated info, tidied up some links and added UX and 3D sections

--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(film/images/ecu.jpg);"></div>
 							<h1><span>Efe Can UYAR</span></h1>
-							<h3><span>Director / Screenwriter / Film Editor</span></h3>
+							<!-- <h3><span>Filmography</span></h3> -->
 							<h4></h4>
 							<!-- <h4><a id="link" href="https://uyarefecan.github.io">Switch to Turkish</a></h4> -->
-							<h4 style="color: white;">Check out my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> shorter resume!</a></h4>
-							<h4 style="color: white;">Back to<a href="index.html" style="color: red;"> the homepage!</a></h4>
+							<h4 style="color: white;">Check out my<a href="#filmography" class="animated" style="color: red;"> Filmography</a></h4>
+							<h4 style="color: white;">Check out my<a href="ux-portfolio.html" target="_blank" style="color: red;"> UX Design Portfolio</a></h4>
+							<h4 style="color: white;">Check out my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> 2D/3D Animation Portfolio</a></h4>
+							<!-- <h4 style="color: white;">Back to<a href="index.html" style="color: red;"> the homepage!</a></h4> -->
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
-									<li><a href="https://www.facebook.com/efecanuyar" target="_blank"><i class="icon-facebook2"></i></a></li>
+									<!-- <li><a href="https://twitter.com/efecanuyar" target="_blank"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://www.facebook.com/efecanuyar" target="_blank"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/efecanuyar/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://www.instagram.com/efecanuyar/"  target="_blank"><i class="icon-instagram2"></i></a></li>
+									<!-- <li><a href="https://www.instagram.com/efecanuyar/"  target="_blank"><i class="icon-instagram2"></i></a></li> -->
 								</ul>
 							</p>
 						</div>
@@ -87,29 +89,29 @@
 				<div class="col-md-4 col-sm-12 col-xs-12">
 					<ul class="info">
 						<li><span class="first-block"><i class="fas fa-user"></i> Name:</span><span class="second-block">Efe Can Uyar</span></li>
-						<li><span class="first-block"><i class="fas fa-mobile"></i> Mobile:</span><span class="second-block"><a href="tel:+447877388187">+447877388187</a></span></li>
+						<!-- <li><span class="first-block"><i class="fas fa-mobile"></i> Mobile:</span><span class="second-block"><a href="tel:+447877388187">+447877388187</a></span></li> -->
 						<li><span class="first-block"><i class="fas fa-envelope"></i> Email:</span><span class="second-block"><a href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></span></li>
-						<li><span class="first-block"><i class="fas fa-map-marker"></i> Address:</span><span class="second-block">London / SW19</span></li>
+						<!-- <li><span class="first-block"><i class="fas fa-map-marker"></i> Address:</span><span class="second-block">London / SW19</span></li> -->
 						<!-- <li><span class="first-block"><i class="fas fa-address-card"></i> Licances:</span><span class="second-block">A2, B</span></li> -->
 					</ul>
 				</div>
 				<div class="col-md-8 col-sm-12 col-xs-12">
 					<h2>Hi!</h2>
-					<p>In 2013, I finished first on the aptitude exam and gained the right to study at Dokuz Eylül University Faculty of Fine Arts in Izmir, Turkey. I graduated from the Film Design and Directing Department in 2017. During my education, I wrote, directed, and edited nine short films. Among these films, "The Receipt," "13 Hours," and "4 Walls" were screened and/or received awards at various festivals and competitions.</p>
+					<p>Back in 2013, I finished first on the aptitude exam and gained the right to study at Dokuz Eylül University Faculty of Fine Arts in Izmir, Turkey. I graduated from the Film Design and Directing Department in 2017. During my education, I wrote, directed, and edited nine short films. Among these films, "The Receipt," "13 Hours," and "4 Walls" were screened and/or received awards at various festivals and competitions.</p>
 					<p>Along with Adobe software, such as Premiere Pro, After Effects, Photoshop, and Illustrator, in which I gained considerable experience during my studies, I have also enhanced my skills in software like NukeX and Blender 3D, and continue to do so. Additionally, I completed two paid internships: one as a set supervisor during the pre-production of the feature film "Wish to Wash With Rain," and another as a videographer and video editor at Tiramisu Productions in İstanbul.</p>
-					<p>In 2015, I began working as a freelancer in video production, photography, menu and packaging design, graphic design, social media management, and web design. In early 2018, I co-founded NOMA Mimarlık ve Reklam Ajansı, where I designed and directed various projects for numerous firms and clients in fields such as music, health, construction, food, and beauty.</p>
-					<p>On this page, you can discover information about my projects, experiences, the software I utilize, and the languages I speak. Additionally, you will find viewing links for all of my films. Can't wait to hear what you think!</p>
-					<p>
+					<p>In 2015, I began working as a freelancer in video production, photography, menu and packaging design, graphic design, social media management, and web design. In early 2018, I joined NOMA Architecture and Advertising Agency, where I managed and designed for various projects for numerous firms and clients in fields such as music, health, construction, food, and beauty.</p>
+					<p>On this page, you can discover my projects, experiences, and the software I utilize. Additionally, you will also find viewing links for all of my films. Check them out!</p>
+					<!-- <p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/efecanuyar" style="background: #a9a9a9 !important;" target="_blank"><i class="icon-twitter2"></i></a></li>
 							<li><a href="https://www.facebook.com/efecanuyar" style="background: #a9a9a9 !important;" target="_blank"><i class="icon-facebook3"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/efecanuyar/" style="background: #a9a9a9 !important;" target="_blank"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="https://www.instagram.com/efecanuyar/" style="background: #a9a9a9 !important;" target="_blank"><i class="icon-instagram2"></i></a></li>
 						</ul>
-					</p>
+					</p> -->
 				</div>
 			</div>
-			<div class="row">
+			<div class="row animate-box" id="filmography">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: -2em !important; margin-top: 5em !important;">
 					<div class="row animate-box">
 						<h2>SHOWREEL 2012-2017</h2>
@@ -153,13 +155,13 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">NOMA Mimarlık ve Reklam Ajansı</h3>
+									<h3 class="timeline-title">NOMA Architecture and Advertising Agency</h3>
 									<span class="company">2018 - 2023 JAN</span>
 								</div>
 								<div class="timeline-body">
-									<p><i class="fas fa-users"></i>  Director, Co-Founder, Social Media Advisor/Manager, Videographer, Video Editor, Motion Designer, Digital Content Creator</p>
+									<p><i class="fas fa-users"></i>  Director, Project Manager, Social Media Advisor/Manager, Videographer, Video Editor, Motion Designer, Digital Content Creator</p>
 									<p><i class="fas fa-link"></i><a href="https://www.youtube.com/@nomamimarlik" target="_blank">  Promotional Videos</a></p>
-									<p><i class="fas fa-link"></i><a href="https://www.nomamimarlik.com" target="_blank">  Company Website</a></p>
+									<p><i class="fas fa-link"></i><a href="https://nomamimarlik.github.io/" target="_blank">  Company Website</a></p>
 								</div>
 							</div>
 						</li>
@@ -506,7 +508,7 @@
 	</div>
 
 	<div id="fh5co-skills" class="animate-box">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Technical Qualifications</h2>
@@ -552,8 +554,8 @@
 					<div class="chart" data-percent="100"><span><strong>Figma</strong></span></div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
+		</div> -->
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>LANGUAGES</h2>
@@ -566,11 +568,11 @@
 				<div class="col-md-6 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>Turkish</strong>100%</span></div>
 				</div>
-				<!-- <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+				<div class="col-md-4 col-sm-4 col-xs-12 text-center">
 					<div class="chart" data-percent="10"><span><strong>Almanca</strong>10%</span></div>
-				</div> -->
+				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div id="fh5co-footer" class="fh5co-bg-dark">
@@ -578,7 +580,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p><i class="fas fa-copyright"></i>  2023 - Efe Can UYAR - All rights reserved.</p>
-					<p><i class="fas fa-mobile"></i>  <a class="phone" href="tel:+447877388187">+447877388187</a></p>
+					<!-- <p><i class="fas fa-mobile"></i>  <a class="phone" href="tel:+447877388187">+447877388187</a></p> -->
 					<p><i class="fas fa-envelope"></i>  <a class="phone" href="mailto:efecanuyar@gmail.com" target="_top">efecanuyar@gmail.com</a></p>
 				</div>
 			</div>
