Refresh on the UX page

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 							<!-- <h3><span>Filmography</span></h3> -->
 							<h4></h4>
 							<!-- <h4><a id="link" href="https://uyarefecan.github.io">Switch to Turkish</a></h4> -->
-							<h4 style="color: white;">Check out my<a href="#filmography" class="animated" style="color: red;"> Filmography</a></h4>
-							<h4 style="color: white;">Check out my<a href="ux-portfolio.html" target="_blank" style="color: red;"> UX Design Portfolio</a></h4>
-							<h4 style="color: white;">Check out my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> 2D/3D Animation Portfolio</a></h4>
+							<h4 style="color: white;">Check my<a href="#filmography" class="animated" style="color: red;"> Filmography</a> out!</h4>
+							<h4 style="color: white;">Check my<a href="ux-portfolio.html" target="_blank" style="color: red;"> UX Design Portfolio</a> out!</h4>
+							<h4 style="color: white;">Check my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> 2D/3D Animation Portfolio</a> out!</h4>
+							<h4 style="color: white;">Check my<a href="https://drive.google.com/file/d/1BsqMxtu6TpM4I0xmdvnwVHsHu-dT8PqE/view?usp=sharing" target="_blank" class="animated" style="color: red;"> Written Resume</a> out!</h4>
 							<!-- <h4 style="color: white;">Back to<a href="index.html" style="color: red;"> the homepage!</a></h4> -->
 							<p>
 								<ul class="fh5co-social-icons">
@@ -96,7 +97,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8 col-sm-12 col-xs-12">
-					<h2>Hi!</h2>
+					<h2>Hello There!</h2>
 					<p>Back in 2013, I finished first on the aptitude exam and gained the right to study at Dokuz Eylül University Faculty of Fine Arts in Izmir, Turkey. I graduated from the Film Design and Directing Department in 2017. During my education, I wrote, directed, and edited nine short films. Among these films, "The Receipt," "13 Hours," and "4 Walls" were screened and/or received awards at various festivals and competitions.</p>
 					<p>Along with Adobe software, such as Premiere Pro, After Effects, Photoshop, and Illustrator, in which I gained considerable experience during my studies, I have also enhanced my skills in software like NukeX and Blender 3D, and continue to do so. Additionally, I completed two paid internships: one as a set supervisor during the pre-production of the feature film "Wish to Wash With Rain," and another as a videographer and video editor at Tiramisu Productions in İstanbul.</p>
 					<p>In 2015, I began working as a freelancer in video production, photography, menu and packaging design, graphic design, social media management, and web design. In early 2018, I joined NOMA Architecture and Advertising Agency, where I managed and designed for various projects for numerous firms and clients in fields such as music, health, construction, food, and beauty.</p>
