--- a/ux-portfolio.html
+++ b/ux-portfolio.html
@@ -76,14 +76,15 @@
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">Hello There!</h1>
-                            <p class="text-white pb-3 animated slideInDown">My name is Efe Can, let me introduce myself. </p>
-                            <p class="text-white pb-3 animated slideInDown">I’m a UX designer with a passion for storytelling, problem-solving, and creating intuitive, user-centered designs. My journey began with a degree in Film Design and Directing from Dokuz Eylül University, where I honed my skills in crafting narratives and visual experiences. Over the years, I've devoted my career to understanding how people behave, react to stories, and navigate their journeys and challenges. This understanding drives me to design experiences that are perfectly tailored to the target audience, ensuring they can enjoy and understand every interaction with minimal friction.</p>
+                            <p class="text-white pb-3 animated slideInDown">Welcome to my UX Portfolio. </p>
+                            <p class="text-white pb-3 animated slideInDown">Over the years, I've devoted my career to understanding how people behave, react to stories, and navigate their journeys and challenges. This drive to understand lead me to design experiences that are perfectly tailored to the target audience, ensuring they can enjoy and understand every interaction with minimal friction.</p>
                             <p class="text-white pb-3 animated slideInDown">After several years as a digital content creator, producing films, animations, and websites, I shifted my focus entirely to UX design. Recently, I completed the Google UX Design Professional Certificate, further solidifying my commitment to creating seamless, user-friendly designs. I’m proficient in tools like Figma, Sketch, and Adobe XD, and approach every project with the belief that great design is a story that should resonate with everyone, making their journey smoother and more enjoyable.</p>
                             <p class="text-white pb-3 animated slideInDown">This website showcases my portfolio, reflecting my journey in UX design and my dedication to enhancing user experiences. I’m excited to share my work with you and look forward to your feedback!</p>
                             <p class="text-white pb-3 animated slideInDown">Thank you for visiting, and I hope you enjoy exploring my portfolio as much as I enjoyed creating it.</p>
                             <a href="#portfolio" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">UX Portfolio</a>
-                            <a href="film.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
-                            <a href="https://drive.google.com/file/d/1KlEc2xdmABxRnpe97FHsTmYySd73jSf-/view?usp=sharing" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight" target="_blank">Resumé</a>
+                            <a href="index.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
+                            <a href="index.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
+                            <a href="https://drive.google.com/file/d/1BsqMxtu6TpM4I0xmdvnwVHsHu-dT8PqE/view?usp=sharing" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight" style="margin-top: 10px;" target="_blank">Resumé</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/hero2.png" alt="">
@@ -206,7 +207,7 @@
             <div class="container py-5 px-lg-5">
                 <div class="wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title text-secondary justify-content-center"><span></span>PORTFOLIO<span></span></p>
-                    <h1 class="text-center mb-5">Check Out My Portfolio</h1>
+                    <!-- <h1 class="text-center mb-5">Check Out My Portfolio</h1> -->
                 </div>
                 <!-- <div class="row mt-n2 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="col-12 text-center">
@@ -527,16 +528,16 @@
                         <h1 class="text-center text-white mb-4">Let's Stay in Touch</h1>
                         <p class="text-white mb-4">If you’d like get in touch with me please feel free to contact me via mail or any social media platforms listed below. Can't wait to hear from you!</p>
                         <p><i class="fa fa-envelope me-3" style="color: white;"></i><a style="color: white;" href="mailto:efecanuyar@gmail.com">efecanuyar@gmail.com</a></p>
-                        <p><i class="fas fa-mobile" style="color: white;"></i>  <a style="color: white;" href="tel:+447877388187">+447877388187</a></p>
+                        <!-- <p><i class="fas fa-mobile" style="color: white;"></i>  <a style="color: white;" href="tel:+447877388187">+447877388187</a></p> -->
                             <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/efecanuyar/?locale=en_US" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/efecanuyar" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/efecanuyar/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <!-- <a class="btn btn-outline-light btn-social" href="https://twitter.com/efecanuyar" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/efecanuyar/" target="_blank"><i class="fab fa-instagram"></i></a> -->
                         <!-- <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Enter Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
                         </div> -->
                     </div>
-                    <div class="col-lg-6 text-center text-lg-start">
+                    <div class="col-lg-6 text-center text-lg-start" style="display: flex; justify-content: center; align-items: center;">
                     <a href="https://www.credly.com/badges/85ca04c4-ac40-4ed1-8a29-7f1b20c40aed/public_url" target="_blank"><img class="img-fluid animated zoomIn" src="img/badge.png" alt="Google UX Design Professional Certificate"></a>
                 </div>
                 </div>
