hidden links to 3d portfolio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<!-- <h4><a id="link" href="https://uyarefecan.github.io">Switch to Turkish</a></h4> -->
 							<h4 style="color: white;">Check my<a href="#filmography" class="animated" style="color: red;"> Filmography</a> out!</h4>
 							<h4 style="color: white;">Check my<a href="ux-portfolio.html" target="_blank" style="color: red;"> UX Design Portfolio</a> out!</h4>
-							<h4 style="color: white;">Check my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> 2D/3D Animation Portfolio</a> out!</h4>
+							<!-- <h4 style="color: white;">Check my<a href="https://drive.google.com/file/d/1Sew3ivO7N-_CnAGHXQsKzhJG6Ly0IIb3/view?usp=sharing" target="_blank" style="color: red;"> 2D/3D Animation Portfolio</a> out!</h4> -->
 							<h4 style="color: white;">Check my<a href="https://drive.google.com/file/d/1BsqMxtu6TpM4I0xmdvnwVHsHu-dT8PqE/view?usp=sharing" target="_blank" class="animated" style="color: red;"> Written Resume</a> out!</h4>
 							<!-- <h4 style="color: white;">Back to<a href="index.html" style="color: red;"> the homepage!</a></h4> -->
 							<p>
