--- a/ux-portfolio.html
+++ b/ux-portfolio.html
@@ -83,8 +83,8 @@
                             <p class="text-white pb-3 animated slideInDown">Thank you for visiting, and I hope you enjoy exploring my portfolio as much as I enjoyed creating it.</p>
                             <a href="#portfolio" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">UX Portfolio</a>
                             <a href="index.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
-                            <a href="index.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a>
-                            <a href="https://drive.google.com/file/d/1BsqMxtu6TpM4I0xmdvnwVHsHu-dT8PqE/view?usp=sharing" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight" style="margin-top: 10px;" target="_blank">Resumé</a>
+                            <!-- <a href="index.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft" target="_blank">Filmography</a> -->
+                            <a href="https://drive.google.com/file/d/1BsqMxtu6TpM4I0xmdvnwVHsHu-dT8PqE/view?usp=sharing" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight" target="_blank">Resumé</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/hero2.png" alt="">
